Fixed overflow issue for data display

--- a/fishui/src/index.css
+++ b/fishui/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --nav-height: 75px;
-  --side-width: 150px;
+  --side-width: 200px;
 }
 
 body {
